--- a/src/App.scss
+++ b/src/App.scss
@@ -12,9 +12,9 @@
     left: 5%;
   }
 }
-.type-btn{
+.type-btn {
   display: flex;
-  
+
   flex-direction: row;
 }
 .vehicle-type {
@@ -149,9 +149,10 @@
   margin-bottom: 20px;
   margin-top: 20px;
 }
-.currencies{
-
-} 
+.mainneasteddiv{
+  display: flex;
+  flex-direction: row;
+}
 .usd-span {
   position: relative;
   left: 10bh;
@@ -167,7 +168,7 @@
   font-size: 20px;
 }
 
-.pointer{
+.pointer {
   display: flex;
   flex-shrink: 0;
   width: 6px;
@@ -176,21 +177,21 @@
   margin-left: 4px;
   margin-right: 4px;
 }
-.Minprice{
+.Minprice {
   width: 200%;
   height: 40%;
   border: gray solid 1px;
   border-radius: 8px;
-  font-size:  13px;
+  font-size: 13px;
   padding: 12px;
   outline: none;
 }
-.Maxprice{
+.Maxprice {
   width: 200%;
   height: 40%;
   border: gray solid 1px;
   border-radius: 8px;
-  font-size:  13px;
+  font-size: 13px;
   padding: 12px;
   outline: none;
 }
@@ -199,4 +200,269 @@ input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+.searchcontent {
+  display: flex;
+}
+.my-component {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.dropdowns {
+  display: flex;
+  flex-direction: row;
+}
+.dropdown {
+  background-color: rgb(255, 255, 255);
+}
+.custom-dropdown {
+  .dropdown-item {
+    display: flex;
+    align-items: center;
+    .toggle-arrow {
+      display: flex;
+      transition: all 0.3s;
+      margin-left: 4px;
+      .dropdown-label {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+      }
+      svg {
+        width: 24px;
+        height: 24px;
+        fill: none;
+        stroke: #6f7383;
+        stroke-width: 1.4;
+        stroke-linecap: round;
+        stroke-linejoin: round;
+      }
+    }
+  }
+}
+.ddpeiod {
+  top: 100;
+  left: auto;
+  @media (min-width: 768px) {
+    right: auto;
+    left: 0;
+  }
+  right: 0;
+  z-index: 2;
+  min-width: 120px;
+  background-color: white;
+  border: solid 1px #757575;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+.period {
+  display: flex;
+  flex-direction: column;
+  left: auto;
+  top: 100;
+  margin-top: 8px;
+  padding-top: 6px;
+  top: 100px;
+  z-index: 2;
+  min-width: 120px;
+  background-color: #fff;
+  border: 1px solid rgb(111, 109, 101);
+  border-radius: 8px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+}
+
+.periodspan {
+  display: flex;
+  align-items: center;
+  height: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
+  font-size: 14px;
+  color: rgb(117, 117, 117);
+  white-space: nowrap;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.periodspan:hover {
+  color: rgb(0, 0, 0);
+}
+.sort {
+  display: flex;
+  flex-direction: column;
+  left: auto;
+  top: 100;
+  margin-top: 8px;
+  padding-top: 6px;
+  top: 100px;
+  z-index: 2;
+  min-width: 120px;
+  background-color: #fff;
+  border: 1px solid rgb(111, 109, 101);
+  border-radius: 8px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+}
+.my-component {
+  display: flex;
+  flex-direction: column;
+}
+.media{
+  @media (max-width: 1200px){
+    display: none;
+  }
+}
+.container {
+  width: 40%;
+  background-color: #fff;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  @media (max-width: 1200) {
+    width: 100%;
+    height: 50%;
+  }
+}
+.nestedcontainer {
+  display: flex;
+  flex-direction: row;
+  padding: 16px;
+  @media (max-width: 1200px) {
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+  }
+}
+.item-img {
+  width: 200px;
+  height: 150px;
+  border-radius: 10px;
+  @media (max-width: 1200px) {
+    width: 80%;
+    order: 2;
+    height: 40%;
+  }
+}
+.cardHeader {
+  position: relative;
+  right: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: space-between;
+  margin-bottom: 12px;
+  @media (max-width: 1200px) {
+      
+  }
+}
+.second-part {
+  display: flex;
+  width: 75%;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.forrentlabel {
+  background-color: #1eb676;
+  overflow: hidden;
+  width: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  margin-left: 20px;
+  @media (max-width: 1200px) {
+    width: 30%;
+  }
+}
+.carmake {
+  display: flex;
+  font-size: larger;
+  color: #272a37;
+  font-size: 14px;
+  font-weight: bold;
+  margin-right: 100%;
+  margin-left: 20px;
+  margin-right: 5px;
+}
+.prod-year {
+  color: #6f7383;
+  margin-left: 4px;
+}
+.model {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.card_midle {
+  margin-left: 10px;
+  font-family: "TBC Sailec";
+  display: flex;
+  font-size: 14px;
+  flex-direction: row;
+  justify-content: space-between;
+  @media (max-width: 1200px) {
+    
+  }
+}
+.borbali {
+  margin-right: 15px;
+  margin-left: 10px;
+}
+.card-midle-midle-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  color: #1b1d25;
+  margin-left: 4px;
+  font-family: "TBC Sailec";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 12px;
+}
+.card-price{
+  font-size: 14px;
+}
+.garbeni{
+  font-weight: bold;
+}
+.fasi{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ font-size: 20px;
+font-weight: bold;
+}
+.valuta{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+  margin-left:8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #e4e7ed;
+}
+.karofka{
+  margin-left: 2%;
+  margin-right: 1%;
+}
+.cardfooter{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.naxvebi{
+  color: #8996ae;
+  font-size: 12px;
+  margin-left: 8px;
+}
+.cardlabel{
+  display: flex;
+  flex-direction: row;
+}
+.order3{
+  @media (max-width: 1200px) {
+    order: 4;
+  }
 }
